# smartprocesspool

./: .gitignore  LICENSE  README.md  build_wheel.py  pyproject.toml  upload_pypi.py
smartpool/: README.md  build_wheel.py  pyproject.toml  upload_pypi.py
smartpool/smartpool/: __init__.py  module_deps.py  pool.py  sysinfo.py  task.py  worker.py
smartpool/smartpool/interpreterpool/: __init__.py  interpreterpool.py  interpreterworker.py
smartpool/smartpool/processpool/: __init__.py  processpool.py  processworker.py
smartpool/smartpool/threadpool/: __init__.py  threadpool.py  threadworker.py
smartpool/smartprocesspool/: smartprocesspool.py  sysinfo.py  task.py  torch_utils.py  utils.py
smartpool_examples/: README.md  install_wheel.py  pyproject.toml  run_count_prime.py  run_cross_validation.py  upload_pypi.py
smartpool_examples/smartpool_examples/count_prime/: __main__.py
smartpool_examples/smartpool_examples/cross_validation/: __main__.py  data_utils.py  model_utils.py
smartpool_examples/smartprocesspool_examples/count_prime/: __main__.py
smartpool_examples/smartprocesspool_examples/cross_validation/: __main__.py  config.py  model_utils.py  visualization.py
smartpool_examples/smartprocesspool_examples/cross_validation/models/: ResNeXt.py  ResNet.py  ResNetV2.py
smartprocesspool/: __init__.py  asizeof.py  build_wheel.py  smartprocesspool.py  sysinfo.py  task.py  upload_pypi.py  utils.py  worker.py
smartprocesspool/smartprocesspool/: __init__.py  gpuinfos.py  smartprocesspool.py  worker.py
smartprocesspool_examples/: pyproject.toml  upload_pypi.py
smartprocesspool_examples/smartprocesspool_examples/count_prime/: __main__.py  count_prime.py
smartprocesspool_examples/smartprocesspool_examples/cross_validation/: __main__.py  data_utils.py  model_utils.py
smartprocesspool_examples/smartprocesspool_examples/cross_validation/models/: LeNet5.py  MLP.py  ModernCNN.py  ResNeXtV2.py  __init__.py
